# serializer version: 1
# name: ClickhouseTestGroupsApi.test_related_groups
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT pdi.person_id
  FROM events e
  JOIN
    (SELECT distinct_id,
            argMax(person_id, version) as person_id
     FROM person_distinct_id2
     WHERE team_id = 99999
     GROUP BY distinct_id
     HAVING argMax(is_deleted, version) = 0) pdi on e.distinct_id = pdi.distinct_id
  WHERE team_id = 99999
    AND timestamp > '2021-02-09T00:00:00.000000'
    AND timestamp < '2021-05-10T00:00:00.000000'
    AND $group_0 = '0::0'
  '''
# ---
# name: ClickhouseTestGroupsApi.test_related_groups.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT $group_1 AS group_key
  FROM events e
  JOIN
    (SELECT group_key
     FROM groups
     WHERE team_id = 99999
       AND group_type_index = 1
     GROUP BY group_key) groups ON $group_1 = groups.group_key
  WHERE team_id = 99999
    AND timestamp > '2021-02-09T00:00:00.000000'
    AND timestamp < '2021-05-10T00:00:00.000000'
    AND group_key != ''
    AND $group_0 = '0::0'
  ORDER BY group_key
  '''
# ---
# name: ClickhouseTestGroupsApi.test_related_groups_person
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT $group_0 AS group_key
  FROM events e
  JOIN
    (SELECT distinct_id,
            argMax(person_id, version) as person_id
     FROM person_distinct_id2
     WHERE team_id = 99999
     GROUP BY distinct_id
     HAVING argMax(is_deleted, version) = 0) pdi on e.distinct_id = pdi.distinct_id
  JOIN
    (SELECT group_key
     FROM groups
     WHERE team_id = 99999
       AND group_type_index = 0
     GROUP BY group_key) groups ON $group_0 = groups.group_key
  WHERE team_id = 99999
    AND timestamp > '2021-02-09T00:00:00.000000'
    AND timestamp < '2021-05-10T00:00:00.000000'
    AND group_key != ''
    AND pdi.person_id = '01795392-cc00-0003-7dc7-67a694604d72'
  ORDER BY group_key
  '''
# ---
# name: ClickhouseTestGroupsApi.test_related_groups_person.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT $group_1 AS group_key
  FROM events e
  JOIN
    (SELECT distinct_id,
            argMax(person_id, version) as person_id
     FROM person_distinct_id2
     WHERE team_id = 99999
     GROUP BY distinct_id
     HAVING argMax(is_deleted, version) = 0) pdi on e.distinct_id = pdi.distinct_id
  JOIN
    (SELECT group_key
     FROM groups
     WHERE team_id = 99999
       AND group_type_index = 1
     GROUP BY group_key) groups ON $group_1 = groups.group_key
  WHERE team_id = 99999
    AND timestamp > '2021-02-09T00:00:00.000000'
    AND timestamp < '2021-05-10T00:00:00.000000'
    AND group_key != ''
    AND pdi.person_id = '01795392-cc00-0003-7dc7-67a694604d72'
  ORDER BY group_key
  '''
# ---
# name: GroupsViewSetTestCase.test_related_groups
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT pdi.person_id
  FROM events e
  JOIN
    (SELECT distinct_id,
            argMax(person_id, version) as person_id
     FROM person_distinct_id2
     WHERE team_id = 99999
     GROUP BY distinct_id
     HAVING argMax(is_deleted, version) = 0) pdi on e.distinct_id = pdi.distinct_id
  WHERE team_id = 99999
    AND timestamp > '2021-02-09T00:00:00.000000'
    AND timestamp < '2021-05-10T00:00:00.000000'
    AND $group_0 = '0::0'
  '''
# ---
# name: GroupsViewSetTestCase.test_related_groups.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT $group_1 AS group_key
  FROM events e
  JOIN
    (SELECT group_key
     FROM groups
     WHERE team_id = 99999
       AND group_type_index = 1
     GROUP BY group_key) groups ON $group_1 = groups.group_key
  WHERE team_id = 99999
    AND timestamp > '2021-02-09T00:00:00.000000'
    AND timestamp < '2021-05-10T00:00:00.000000'
    AND group_key != ''
    AND $group_0 = '0::0'
  ORDER BY group_key
  '''
# ---
# name: GroupsViewSetTestCase.test_related_groups_person
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT $group_0 AS group_key
  FROM events e
  JOIN
    (SELECT distinct_id,
            argMax(person_id, version) as person_id
     FROM person_distinct_id2
     WHERE team_id = 99999
     GROUP BY distinct_id
     HAVING argMax(is_deleted, version) = 0) pdi on e.distinct_id = pdi.distinct_id
  JOIN
    (SELECT group_key
     FROM groups
     WHERE team_id = 99999
       AND group_type_index = 0
     GROUP BY group_key) groups ON $group_0 = groups.group_key
  WHERE team_id = 99999
    AND timestamp > '2021-02-09T00:00:00.000000'
    AND timestamp < '2021-05-10T00:00:00.000000'
    AND group_key != ''
    AND pdi.person_id = '01795392-cc00-0003-7dc7-67a694604d72'
  ORDER BY group_key
  '''
# ---
# name: GroupsViewSetTestCase.test_related_groups_person.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT $group_1 AS group_key
  FROM events e
  JOIN
    (SELECT distinct_id,
            argMax(person_id, version) as person_id
     FROM person_distinct_id2
     WHERE team_id = 99999
     GROUP BY distinct_id
     HAVING argMax(is_deleted, version) = 0) pdi on e.distinct_id = pdi.distinct_id
  JOIN
    (SELECT group_key
     FROM groups
     WHERE team_id = 99999
       AND group_type_index = 1
     GROUP BY group_key) groups ON $group_1 = groups.group_key
  WHERE team_id = 99999
    AND timestamp > '2021-02-09T00:00:00.000000'
    AND timestamp < '2021-05-10T00:00:00.000000'
    AND group_key != ''
    AND pdi.person_id = '01795392-cc00-0003-7dc7-67a694604d72'
  ORDER BY group_key
  '''
# ---
